@@ -1,0 +1,6 @@
+#include <iostream>
+int main(int, char **)
+{
+  std::cout << "hello !" << std::endl;
+  return 1; // Let this test fail.
+}
