@@ -1,0 +1,7 @@
+#include <stdio.h>
+
+int main(int argc, char **argv)
+{
+  printf("hello world !\n");
+  return 0;
+}
