@@ -1,0 +1,5 @@
+#include <iostream>
+int main(int, char **)
+{
+  std::cout << "world !" << std::endl;
+}
